--- a/style.css
+++ b/style.css
@@ -8,3 +8,12 @@
     padding-top:17%; 
     font-family: 'Gabriela', serif;
 }
+.servicespg3{
+    background-image: url(images/backgrounds/s_image.jpg);
+    color: white;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    font-family: 'Copse', serif;
+    font-size: 18px;
+}
