--- a/style.css
+++ b/style.css
@@ -8,6 +8,27 @@
     padding-top:17%; 
     font-family: 'Gabriela', serif;
 }
+
+#mouse-click {
+    padding-top : 22px;
+    margin-top: 10%;
+    padding-bottom: 30px;
+  }
+  #mouse-click {
+    animation: bounce 3s infinite;
+  }
+  @keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+      transform: translateY(0);
+    }
+    40% {
+      transform: translateY(-55px);
+    }
+    60% {
+      transform: translateY(-45px);
+    }
+  }
+
 .servicespg3{
     background-image: url(images/backgrounds/s_image.jpg);
     color: white;
@@ -17,3 +38,15 @@
     font-family: 'Copse', serif;
     font-size: 18px;
 }
+
+.footer {
+    display: flex;
+    justify-content: center;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color:white !important;
+    text-align: center;
+    line-height: 30px;
+    width: 1300px;
+};
