--- a/style.css
+++ b/style.css
@@ -39,6 +39,22 @@
     font-size: 18px;
 }
 
+#overlay,#overlay2,#overlay3,#overlay4,#overlay5,#overlay6,#overlay7,#overlay8{
+    display: none;
+    color: black;
+    width: 100%;
+    height: 100%;
+    background-color:rgba(255, 255, 255, 0.456);
+    position:absolute;
+    top: 20px;
+    left: 35px;
+    font-weight: bold;
+    text-align: center;
+    font-size: 30px;
+    padding-top: 50%;
+    font-family: 'Delius Swash Caps', cursive;
+};
+
 .footer {
     display: flex;
     justify-content: center;
