updated styiling and js file

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Copse|Delius+Swash+Caps|Gabriela|Unkempt&display=swap');
 .landingpg{
     background-image: url('../images/backgrounds/h_img.jpg');
     background-position: center center;
@@ -8,7 +9,6 @@
     padding-top:17%; 
     font-family: 'Gabriela', serif;
 }
-
 #mouse-click {
     padding-top : 22px;
     margin-top: 10%;
@@ -38,6 +38,11 @@
     font-family: 'Copse', serif;
     font-size: 18px;
 }
+.form1{
+    background-image: url(images/backgrounds/c_image.jpg);
+    background-position: center;
+}
+
 
 #overlay,#overlay2,#overlay3,#overlay4,#overlay5,#overlay6,#overlay7,#overlay8{
     display: none;
@@ -52,17 +57,39 @@
     text-align: center;
     font-size: 30px;
     padding-top: 50%;
-    font-family: 'Delius Swash Caps', cursive;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 };
 
 .footer {
-    display: flex;
-    justify-content: center;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color:white !important;
     text-align: center;
-    line-height: 30px;
-    width: 1300px;
+    padding-top: 30px;
+    font-family: 'Delius Swash Caps', cursive;
 };
+footer p{
+    margin-top: 10px;
+  }
+  #product, #development, #design{
+    display: none;
+    font-family: 'Copse', serif;
+    font-size: 16px;
+  }
+  #product .title, #development .title, #design .title{
+    font-size: 20px;
+    font-weight: 500;
+    font-weight: 600;
+  }
+  #overlay,#overlay2,#overlay3,#overlay4,#overlay5,#overlay6,#overlay7,#overlay8{
+    display: none;
+    color: black;
+    width: 100%;
+    height: 100%;
+    background-color:rgba(255, 255, 255, 0.456);
+    position:absolute;
+    top: 20px;
+    left: 35px;
+    font-weight: bold;
+    text-align: center;
+    font-size: 30px;
+    padding-top: 50%;
+    font-family: 'Delius Swash Caps', cursive;
+  }
