--- a/style.css
+++ b/style.css
@@ -6,9 +6,10 @@
     background-repeat: no-repeat;
     color: white;
     text-align: center;
-    padding-top:17%; 
+    padding-top:17%;
+    padding-bottom:12%;
     font-family: 'Gabriela', serif;
-}
+  }
 #mouse-click {
     padding-top : 22px;
     margin-top: 10%;
