--- a/style.css
+++ b/style.css
@@ -64,9 +64,8 @@
 .footer {
     text-align: center;
     padding-top: 30px;
-    font-family: 'Delius Swash Caps', cursive;
 };
-footer p{
+.footer p{
     margin-top: 10px;
   }
   #product, #development, #design{
