--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@
   padding-right:10%;
 }
 .form1{
-    background-image: url(images/backgrounds/c_image.jpg);
+    background-image: url(./images/backgrounds/c_image.jpg !important);
     background-position: center;
 }
 #overlay,#overlay2,#overlay3,#overlay4,#overlay5,#overlay6,#overlay7,#overlay8{
