added backgroung photo in contact section

--- a/style.css
+++ b/style.css
@@ -54,9 +54,9 @@
   align-items: center;
   padding-right:10%;
 }
-.form1{
-    background-image: url(./images/backgrounds/c_image.jpg !important);
-    background-position: center;
+.contact{
+  background-image: url(./images/backgrounds/c_image.jpg);
+  background-position: center;
 }
 #overlay,#overlay2,#overlay3,#overlay4,#overlay5,#overlay6,#overlay7,#overlay8{
     display: none;
